--- a/css/style.css
+++ b/css/style.css
@@ -93,10 +93,22 @@ header .user i {
 
 header i,
 header .toggle {
-  font-size: 19px;
+  font-size: 25px;
   color: #fff;
   cursor: pointer;
 }
+#header-toggle{
+  font-size: 39px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.toggle{
+  margin: 10px;
+  margin-left: 25px;
+  
+}
+
 
 /*-------------------header------------*/
 /*--------------nav------------*/
@@ -113,7 +125,7 @@ header .toggle {
 }
 
 .nav_container {
-  height: 75%;
+  height: 50%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -125,7 +137,9 @@ header .toggle {
 .nav_container::-webkit-scrollbar {
   display: none;
 }
-
+#menu2{
+  font-size: 40px;
+}
 .nav_logo {
   font-weight: 600;
   margin: 0;
@@ -348,7 +362,7 @@ header .toggle {
   .nav {
     left: 0;
     padding: 19px 24px 0;
-    width: 88px;
+    width: 80px;
   }
 
   main {
@@ -385,8 +399,14 @@ header .toggle {
 }
 
 @media screen and (max-width:420px) {
+  #logo img{
+    margin-top: 15px;
+    margin-left: 5px;
+    width: 165px;
+  }
   header .search {
-    width: 70%;
+    width: 30%;
+    margin-left: 5%;
   }
 
   header .none,
@@ -400,7 +420,7 @@ header .toggle {
 
   main {
     padding-top: 20px;
-    padding-left: 50px;
+    padding-left: 20px;
   }
 }
 
