--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ header .toggle {
   position: fixed;
   top: 0;
   left: -100%;
-  height: 100vh;
+  height: 90vh;
   padding: 16px 16px 0;
   background: #1c1c1c;
   box-shadow: 1px 0 0 rgba(22, 8, 43, 0.1);
@@ -125,7 +125,7 @@ header .toggle {
 }
 
 .nav_container {
-  height: 50%;
+  height: 90%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -218,7 +218,7 @@ header .toggle {
 }
 
 .nav_dropdown-item {
-  font-size: 12px;
+  font-size: 20px;
   font-weight: 500;
   color: #fff;
 }
@@ -362,7 +362,7 @@ header .toggle {
   .nav {
     left: 0;
     padding: 19px 24px 0;
-    width: 80px;
+    width: 70px;
   }
 
   main {
@@ -406,13 +406,13 @@ header .toggle {
   }
   header .search {
     width: 30%;
-    margin-left: 5%;
+    margin-left: 10%;
   }
 
-  header .none,
+ /* header .none,
   header .user {
     display: none;
-  }
+  }*/
 
   .grid {
     grid-template-columns: repeat(1, 1fr);
