--- a/css/K Profile-card.css
+++ b/css/K Profile-card.css
@@ -92,3 +92,15 @@ body {
     background: #03a9f4;
     color: #fff;
 }
+@media screen and (min-width:768px) {
+    #left ,#right{
+      margin: 0%;
+      padding: 0%;
+    }
+
+  }
+  @media screen and (max-width:420px) {
+    .body{
+        align-content: space-around;
+    }
+  }
