--- a/css/profile.css
+++ b/css/profile.css
@@ -27,6 +27,9 @@
   transform: translate(-50%, -50%);
   text-align: center;
 }
+.detail a{
+  text-decoration: none;
+}
 
 
 @media screen and (max-width:768px) {
