--- a/css/single.css
+++ b/css/single.css
@@ -291,8 +291,11 @@ button {
  
 }
 @media screen and (max-width:420px) { 
+  #left #left_content{
+    width: 300px;
+  }
   #xxx{
-    width: 20%;
+    width: 90%;
   }
   .right, .right_content{
     width: 355px !important;
