--- a/css/K Profile-card.css
+++ b/css/K Profile-card.css
@@ -89,7 +89,7 @@ body {
     transition: 0.5s;
 }
 .sci li a:hover {
-    background: #03a9f4;
+    background: #df9800;
     color: #fff;
 }
 @media screen and (min-width:768px) {
