--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ span, i {
   top: 0;
   left: 0;
   width: 100%;
+  height: 10%;
   background-color: #232323;
   box-shadow: 0 1px 0 rgba(22, 8, 43, 0.1);
   display: flex;
@@ -336,11 +337,15 @@ header .toggle {
 #count{
   width: 70%;
   height: 50%;
+  align-items: center;
 }
 #count img{
-  border: solid 20px;
+  border: solid black 20px;
 }
+.title{
+  width: 40%;
 
+}
 /*--------------video_items------------*/
 @media screen and (min-width:768px) {
   body {
@@ -418,6 +423,10 @@ header .toggle {
 }
 
 @media screen and (max-width:420px) {
+  .header{
+    padding-top: 2%;
+    height: 9%;
+  }
   #logo img{
     margin-top: 15px;
     margin-left: 5px;
@@ -440,6 +449,10 @@ header .toggle {
   main {
     padding-top: 20px;
     padding-left: 20px;
+  }
+  .title{
+    width: 90%;
+    font-size: 70%;
   }
 }
 
