--- a/css/single.css
+++ b/css/single.css
@@ -1,3 +1,4 @@
+
 .left {
   width: 1000px;
   color: #fff;
@@ -11,7 +12,7 @@
 }
 
 .left .left_content {
-  width: 1000px;
+  width: 820px;
 }
 
 .right_content {
@@ -314,6 +315,11 @@ button {
     width: 20%;
     margin-left: 10px;
   }
+  .header {
+    padding-top: 2%;
+    height: 6%;
+    width: 130%;
+}
   #vid{
     width: 350px;
     height: 320px;
