--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,82 @@ header .toggle {
 
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
+
+.wrapper{
+  max-width: 450px;
+  margin-top: 12px;
+  margin-left: 30%;
+  
+}
+
+.wrapper .search-input{
+  background: #1c1c1c;
+ 
+
+  position: relative;
+  box-shadow: 0px 1px 5px 3px rgba(0,0,0,0.12);
+}
+.search-input{
+  width: 250px;
+}
+.search-input input{
+  height: 40px;
+  width: 100%;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  padding: 0 60px 0 20px;
+  font-size: 18px;
+  box-shadow: 0px 1px 5px rgba(0,0,0,0.1);
+}
+
+.search-input.active input{
+  border-radius: 5px 5px 0 0;
+}
+
+.search-input .autocom-box{
+  padding: 0;
+  opacity: 0;
+  pointer-events: none;
+  max-height: 280px;
+  overflow-y: auto;
+}
+
+.search-input.active .autocom-box{
+  padding: 10px 8px;
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.autocom-box li{
+  list-style: none;
+  padding: 8px 12px;
+  display: none;
+  width: 100%;
+  cursor: default;
+  border-radius: 3px;
+}
+
+.search-input.active .autocom-box li{
+  display: block;
+}
+.autocom-box li:hover{
+  background: #58555e;
+}
+.search-input .icon{
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  height: 55px;
+  width: 55px;
+  text-align: center;
+  line-height: 55px;
+  font-size: 20px;
+  color: #644bff;
+  cursor: pointer;
+}
 /*-------------------header------------*/
 /*--------------nav------------*/
 .nav {
@@ -422,10 +497,11 @@ header .toggle {
 }
 
 .footer a:hover {
-  color:#d66902;
+  color: #d66902;
 
 }
-.footer:hover{
+
+.footer:hover {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
@@ -484,9 +560,10 @@ ul {
 
   header {
     padding: 0 48px 0 80px;
-    
+
   }
-  .header{
+
+  .header {
     height: 9%;
     width: 100%;
 
