--- a/css/style.css
+++ b/css/style.css
@@ -242,6 +242,7 @@ header .toggle {
 
 #menu2 {
   font-size: 40px;
+  margin-left: 2px;
 }
 
 .nav_logo {
@@ -301,12 +302,14 @@ header .toggle {
   letter-spacing: 1px;
   color: #a5a1aa;
 }
-.msg li  {
- 
+
+.msg li {
+
   text-decoration: none;
   list-style: none;
 
 }
+
 .msg li a {
   margin-left: 12%;
   text-decoration: none;
@@ -393,11 +396,12 @@ header .toggle {
 /*----------nav_dropdown   */
 /*--------------nav------------*/
 /*--------------video_items------------*/
-
+.video_items{
+  margin-bottom: 20px;
+}
 .video_items video {
   width: 295px;
   height: 170px;
-
 }
 
 .video_items a img {
@@ -500,6 +504,7 @@ header .toggle {
   flex-direction: column;
   border-radius: 9px;
 
+
 }
 
 .footer a {
@@ -550,6 +555,13 @@ header .toggle {
 
 }
 
+.pagination h3 {
+  color:white;
+  background-color: #df9800;
+  border-radius: 3px;
+  padding-left: 5px;
+  padding-right: 8px;
+}
 
 ol,
 ul {
@@ -561,7 +573,11 @@ ul {
   justify-content: center;
   text-decoration: none;
   color: white;
-  margin: 5px;
+  margin: 10px;
+}
+
+.pagination a:hover {
+  color: #df9800;
 }
 
 /*--------------video_items------------*/
@@ -649,11 +665,11 @@ ul {
   .grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 20px;
+    grid-gap: 60px;
   }
 
   .pagination {
-    margin-left: 125px;
+    margin-left: 50px;
   }
 }
 
@@ -679,23 +695,27 @@ ul {
     width: 40px;
     margin-top: 10px;
     margin-left: 2%;
-}
-.search-input input {
-  margin-left: 5px;
-  width: 115px;
-  padding: 0 0px 0 5px;
-}
+  }
+
+  .search-input input {
+    margin-left: 5px;
+    width: 115px;
+    padding: 0 0px 0 5px;
+  }
 
 
   .search-input {
     width: 125px;
-}
+  }
+
   .toggle {
     margin: 10px;
     margin-left: 95px;
-}
+  }
+
   .grid {
     grid-template-columns: repeat(1, 1fr);
+    margin-bottom: 10px;
   }
 
   main {
@@ -717,6 +737,14 @@ ul {
 
     margin-left: -15px;
   }
+
+  .pagination a {
+    justify-content: center;
+    text-decoration: none;
+    color: white;
+    margin: 5px;
+  }
+
 }
 
 @media screen and (min-width:1080px) {
@@ -724,9 +752,10 @@ ul {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
+    margin-bottom: 80px;
   }
 
   .pagination {
-    margin-left: 37%;
+    margin-left: 34%;
   }
 }
