--- a/css/K Profile-card.css
+++ b/css/K Profile-card.css
@@ -8,8 +8,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    background: linear-gradient(#03a9f4, #03a9f4 45%, #fff 45%, #fff 100%);
+    min-height: 150vh;
+    background: linear-gradient(#ff512f , #dd2476 50%,#ff2a00 90%);
 }  
 .card {
     position: relative;
@@ -41,7 +41,9 @@ body {
     height: 100%;
     object-fit: cover;
 } 
+    
 .content {
+    margin-top: 20px;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -57,13 +59,14 @@ body {
     flex-direction: column;
     text-align: center;
 }.content .detail h2 {
-    color: #444;
+   
+    color: rgb(0, 0, 0);
     font-size: 1.6em;
     font-weight: bolder;
 }
 .content .detail h2 span {
     font-size: 0.7em;
-    color: #03a9f4;
+    color:  #03a9f4;
     font-weight: bold;
 }.sci {
     position: relative;
@@ -89,7 +92,7 @@ body {
     transition: 0.5s;
 }
 .sci li a:hover {
-    background: #df9800;
+    background: #03a9f4;
     color: #fff;
 }
 @media screen and (min-width:768px) {
@@ -102,8 +105,39 @@ body {
   @media screen and (max-width:420px) {
     .body{
         align-content: space-around;
+
     }
     .card{
         box-shadow: none;
+       
+    }
+    #right{
+        margin-top: 435px;
+        display: flex;
+        flex-direction: column;
+        left: 60px;
+        margin-bottom:10% ;
+    height: 60%;
+    }
+    #left{
+        left: 60px;
+        top: -160px;
+      
+    }
+    .split{
+        width: 65%;
+    
+    left: 10px;
+}
+
+  }
+  /*
+
+  UNDER PROCESS
+  @media screen and (min-width:1000px) 
+  {
+    body{
+        background: linear-gradient(#ff512f 5%, #dd2476 90%, #278ceb , #dd2476 , #dd2476);
     }
   }
+  */
