--- a/css/K Profile-card.css
+++ b/css/K Profile-card.css
@@ -86,7 +86,7 @@ body {
     border-radius: 50%;
     background: transparent;
     font-size: 1.5em;
-    color: #444;
+    color: rgb(0, 0, 0);
     text-decoration: none;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     transition: 0.5s;
@@ -109,7 +109,7 @@ body {
     }
     .card{
         box-shadow: none;
-        height: 410px
+        height: 400px
        
     }
     #right{
@@ -122,7 +122,8 @@ body {
     }
     #left{
         left: 60px;
-        top: -133px;
+        margin-top: -90px;
+     
       
     }
     .split{
