--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ i {
   background-color: #232323;
   box-shadow: 0 1px 0 rgba(22, 8, 43, 0.1);
   display: flex;
+  padding-bottom: 6%;
 }
 
 header .header_container {
@@ -66,6 +67,7 @@ header .header_container {
 #logo img {
   border-radius: 4px;
   height: 140%;
+  width: 550%;
 
 }
 
@@ -593,7 +595,7 @@ ul {
   }
 
   .header {
-    height: 9%;
+    height: 10%;
     width: 100%;
 
   }
@@ -677,7 +679,8 @@ ul {
 @media screen and (max-width:420px) {
   .header {
     padding-top: 2%;
-    height: 9%;
+    height: 11%;
+    padding-bottom: 1%;
   }
 
   #logo img {
