--- a/css/all-responsive-white.css@v=7.css
+++ b/css/all-responsive-white.css@v=7.css
@@ -20,9 +20,9 @@
 .select2-container--classic.select2-container--open.select2-container--below .select2-selection--single{border-bottom:none;border-bottom-left-radius:0;border-bottom-right-radius:0;background-image:-webkit-linear-gradient(top, #eee 50%, #fff 100%);background-image:-o-linear-gradient(top, #eee 50%, #fff 100%);background-image:linear-gradient(to bottom, #eee 50%, #fff 100%);background-repeat:repeat-x;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFEEEEEE', endColorstr='#FFFFFFFF', GradientType=0)}.select2-container--classic .select2-selection--multiple{background-color:white;border:1px solid #aaa;border-radius:4px;cursor:text;outline:0}.select2-container--classic .select2-selection--multiple:focus{border:1px solid #5897fb}.select2-container--classic .select2-selection--multiple .select2-selection__rendered{list-style:none;margin:0;padding:0 5px}.select2-container--classic .select2-selection--multiple .select2-selection__clear{display:none}.select2-container--classic .select2-selection--multiple .select2-selection__choice{background-color:#e4e4e4;border:1px solid #aaa;border-radius:4px;cursor:default;float:left;margin-right:5px;margin-top:5px;padding:0 5px}.select2-container--classic .select2-selection--multiple .select2-selection__choice__remove{color:#888;cursor:pointer;display:inline-block;font-weight:bold;margin-right:2px}.select2-container--classic .select2-selection--multiple .select2-selection__choice__remove:hover{color:#555}.select2-container--classic[dir="rtl"] .select2-selection--multiple .select2-selection__choice{float:right}.select2-container--classic[dir="rtl"] .select2-selection--multiple .select2-selection__choice{margin-left:5px;margin-right:auto}.select2-container--classic[dir="rtl"] .select2-selection--multiple .select2-selection__choice__remove{margin-left:2px;margin-right:auto}.select2-container--classic.select2-container--open .select2-selection--multiple{border:1px solid #5897fb}.select2-container--classic.select2-container--open.select2-container--above .select2-selection--multiple{border-top:none;border-top-left-radius:0;border-top-right-radius:0}.select2-container--classic.select2-container--open.select2-container--below .select2-selection--multiple{border-bottom:none;border-bottom-left-radius:0;border-bottom-right-radius:0}.select2-container--classic .select2-search--dropdown .select2-search__field{border:1px solid #aaa;outline:0}.select2-container--classic .select2-search--inline .select2-search__field{outline:0;box-shadow:none}.select2-container--classic .select2-dropdown{background-color:#fff;border:1px solid transparent}.select2-container--classic .select2-dropdown--above{border-bottom:none}.select2-container--classic .select2-dropdown--below{border-top:none}.select2-container--classic .select2-results>.select2-results__options{max-height:200px;overflow-y:auto}.select2-container--classic .select2-results__option[role=group]{padding:0}.select2-container--classic .select2-results__option[aria-disabled=true]{color:grey}.select2-container--classic .select2-results__option--highlighted[aria-selected]{background-color:#3875d7;color:#fff}.select2-container--classic .select2-results__group{cursor:default;display:block;padding:6px}.select2-container--classic.select2-container--open .select2-dropdown{border-color:#5897fb}
 
 .container-switcher{
-  margin-left: 10px;
-  margin-top: 5px;
-  position: relative;
+  margin-left: 469px;
+  margin-top: 15px;
+  position: fixed;
   display: inline-block;
 }
 .container-switcher span{
@@ -94,7 +94,7 @@ dt,
 dd,
 ul,
 ol,
-li,
+
 h1,
 h2,
 h3,
@@ -110,6 +110,11 @@ p,
 blockquote,
 th,
 td {
+  margin: 0;
+  padding: 0;
+}
+li{
+  z-index: 0;
   margin: 0;
   padding: 0;
 }
@@ -1659,7 +1664,7 @@ i{
   position: absolute;
   top: 56px;
   left: 0;
-  z-index: 10;
+  z-index: -1;
   width: 100%;
   opacity: 0;
   visibility: hidden;
@@ -1676,6 +1681,7 @@ i{
 
 .navigation .primary ul li {
   display: block;
+  z-index: -1;
 }
 .navigation .primary ul li a {
   background-color: #e0dfdf;
@@ -7069,7 +7075,20 @@ flex: 0 1 320px;
     -ms-flex: 1 1 100%;
     flex: 1 1 100%;
     padding: 10px 0 0;
+   
+  
+      margin-left: 42%;
+      margin-top: 6px;
+     
+      margin-right: 41%;
+    
   }
+  .container-switcher {
+    margin-left: 269px;
+    margin-top: 15px;
+    position: fixed;
+    display: inline-block;
+}
   .logo {
     margin: 0 10px 0 0;
   }
@@ -7629,6 +7648,16 @@ display:none;
 }
 
 @media screen and (max-width: 420px) {
+  .search {
+    display: flex;
+    padding: 2px 12px;
+    background-color: #121212;
+    border-radius: 4px;
+    margin-left: 26%;
+    margin-top: -45px;
+    height: 70px;
+    margin-right: 28%;
+  }
   .member-links ul > li:first-child{
     display: none;
   }
@@ -7947,14 +7976,20 @@ display:none;
     font-size: 13px;
     font-family: unset;
   }
-
+  .container-switcher {
+    margin-left: 215px;
+    margin-top: 15px;
+    position: fixed;
+    display: inline-block;
+}
+/*
   .search {
     -webkit-box-flex: 1;
     -ms-flex: 1 1 100%;
     flex: 1 1 100%;
     padding: 0px 50px 0px;
 
-  }
+  }*/
   .uploads{
     display: none;
   }
