--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
-
+/*
 * {
   margin-top: 0%;
   padding: 0%;
@@ -45,7 +45,7 @@ i {
 }
 
 /*-------------------header------------*/
-.header {
+/*.header {
   position: fixed;
   top: 0;
   left: 0;
@@ -75,16 +75,20 @@ header .header_container {
   justify-content: center;
   align-items: center;
 }
+*/@media screen and (min-width: 1040px){
 
-header .search {
+.search {
   display: flex;
-  padding: 7px 12px;
+  padding: 2px 12px;
   background-color: #121212;
   border-radius: 4px;
-  margin-left: 30%;
-  height: 53px;
+  margin-left: 10%;
+  margin-top: 6px;
+  height: 69px;
+ margin-right: 40%
 }
-
+}
+/*
 header input {
   width: 100%;
   border: none;
@@ -118,7 +122,7 @@ header .toggle {
   color: #fff;
   cursor: pointer;
 }
-
+*/
 #header-toggle {
   font-size: 39px;
   color: #fff;
@@ -179,7 +183,7 @@ header .toggle {
 
 .search-input.active .autocom-box {
   padding: 10px 8px;
-  opacity: 1;
+  opacity: 23;
   pointer-events: auto;
 }
 
@@ -191,6 +195,7 @@ header .toggle {
   cursor: default;
   border-radius: 3px;
   color: #d66902;
+  z-index: +1;
 }
 
 .search-input.active .autocom-box li {
@@ -210,12 +215,22 @@ header .toggle {
   text-align: center;
   line-height: 55px;
   font-size: 20px;
-  color: #644bff;
+  color: #dc8a2c;
   cursor: pointer;
 }
+@media screen and (max-width: 1040px){
+  .search-input {
+  
+    margin-left: 42%;
+    margin-top: 6px;
+   
+    margin-right: 41%;
+  }
+}
 
+/*
 /*-------------------header------------*/
-/*--------------nav------------*/
+/*--------------nav------------*//*
 .nav {
   position: fixed;
   top: 0;
@@ -323,7 +338,7 @@ header .toggle {
   color: #df9800;
 }
 
-/*----------nav_dropdown  */
+/*----------nav_dropdown  *//*
 .nav_dropdown {
   overflow: hidden;
   max-height: 21px;
@@ -400,7 +415,7 @@ header .toggle {
 /*--------------video_items------------*/
 
 /*-------banner------*/
-
+/*
 .banner{
   
   height: 145px;
@@ -413,7 +428,7 @@ header .toggle {
 
 
 /*-------banner------*/
-
+/*
 main{
   margin-top: 45px;
 }
@@ -486,7 +501,7 @@ main{
 }
 
 .count {
-  /*border: 10px  solid black;*/
+  /*border: 10px  solid black;*//*
   border-radius: 12px;
   background-color: black;
   align-items: center;
@@ -603,7 +618,7 @@ ul {
   color: #df9800;
 }
 
-/*--------------video_items------------*/
+/*--------------video_items------------*//*
 @media screen and (min-width:768px) {
   body {
     padding: 16px 48px 0 96px;
@@ -737,7 +752,7 @@ ul {
     margin: 10px;
     margin-left: 340px;
   }
-
+ /*
   .grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -829,7 +844,7 @@ ul {
     margin: 10px;
     margin-left: 95px;
   }
-
+ /*
   .grid {
     grid-template-columns: repeat(1, 1fr);
     margin-bottom: 10px;
