--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
-/*
+
 * {
   margin-top: 0%;
   padding: 0%;
@@ -44,8 +44,8 @@ i {
   transition: 0.5s;
 }
 
-/*-------------------header------------*/
-/*.header {
+-------------------header------------
+.header {
   position: fixed;
   top: 0;
   left: 0;
@@ -75,7 +75,7 @@ header .header_container {
   justify-content: center;
   align-items: center;
 }
-*/@media screen and (min-width: 1040px){
+@media screen and (min-width: 1040px){
 
 .search {
   display: flex;
@@ -88,7 +88,7 @@ header .header_container {
  margin-right: 40%
 }
 }
-/*
+
 header input {
   width: 100%;
   border: none;
@@ -122,7 +122,7 @@ header .toggle {
   color: #fff;
   cursor: pointer;
 }
-*/
+
 #header-toggle {
   font-size: 39px;
   color: #fff;
@@ -228,9 +228,9 @@ header .toggle {
   }
 }
 
-/*
-/*-------------------header------------*/
-/*--------------nav------------*//*
+
+-------------------header------------
+--------------nav------------
 .nav {
   position: fixed;
   top: 0;
@@ -338,7 +338,7 @@ header .toggle {
   color: #df9800;
 }
 
-/*----------nav_dropdown  *//*
+----------nav_dropdown  
 .nav_dropdown {
   overflow: hidden;
   max-height: 21px;
@@ -410,12 +410,12 @@ header .toggle {
   color: #ff0000;
 }
 
-/*----------nav_dropdown   */
-/*--------------nav------------*/
-/*--------------video_items------------*/
+----------nav_dropdown   
+--------------nav------------
+--------------video_items------------
 
-/*-------banner------*/
-/*
+-------banner------
+
 .banner{
   
   height: 145px;
@@ -427,8 +427,8 @@ header .toggle {
 
 
 
-/*-------banner------*/
-/*
+-------banner------
+
 main{
   margin-top: 45px;
 }
@@ -501,7 +501,7 @@ main{
 }
 
 .count {
-  /*border: 10px  solid black;*//*
+  border: 10px  solid black;
   border-radius: 12px;
   background-color: black;
   align-items: center;
@@ -618,7 +618,7 @@ ul {
   color: #df9800;
 }
 
-/*--------------video_items------------*//*
+/*--------------video_items------------*/
 @media screen and (min-width:768px) {
   body {
     padding: 16px 48px 0 96px;
@@ -727,10 +727,10 @@ ul {
 
 
 
-  /* header .none,
+   header .none,
   header .user {
     display: none;
-  }*/
+  }
   .wrapper {
     width: 40px;
     margin-top: 10px;
@@ -752,7 +752,7 @@ ul {
     margin: 10px;
     margin-left: 340px;
   }
- /*
+ 
   .grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -819,10 +819,10 @@ ul {
 
 
 
-  /* header .none,
+   header .none,
   header .user {
     display: none;
-  }*/
+  }
   .wrapper {
     width: 40px;
     margin-top: 10px;
@@ -844,7 +844,7 @@ ul {
     margin: 10px;
     margin-left: 95px;
   }
- /*
+ 
   .grid {
     grid-template-columns: repeat(1, 1fr);
     margin-bottom: 10px;
